Add API classes to managed the bitbucket endpoints and hide the internal implementation